--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,16 +1,17 @@
 {
     "name": "re-react-dagre",
     "version": "0.0.1",
-    "sources": {
-        "dir": "src",
-        "subdirs": true
-    },
+    "sources": ["src", "src/interop", "example"],
     "package-specs": {
         "module": "es6-global",
         "in-source": false
     },
     "suffix": ".bs.js",
+    "reason": {
+        "react-jsx": 3
+    },
     "bs-dependencies": [
+        "@rescript/react"
     ],
     "warnings": {
         "error": "+101"
