--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "re-react-dagre",
+    "name": "rescript-diagram",
     "version": "0.0.1",
     "scripts": {
         "build": "rescript",
@@ -9,7 +9,8 @@
     },
     "keywords": [
         "rescript",
-        "dagre",
+        "diagram",
+        "auto layout",
         "react"
     ],
     "author": "",
