--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "dependencies": {
         "@rescript/react": "^0.10.3",
         "dagre": "^0.8.5",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-reconciler": "^0.26.2",
-        "rescript": "*"
+        "react": "^17.0.0",
+        "react-dom": "^17.0.0",
+        "react-reconciler": "^0.26.0"
     },
     "devDependencies": {
-        "@vitejs/plugin-react": "^1.0.7",
-        "vite": "^2.7.2"
+        "rescript": "*",
+        "@vitejs/plugin-react": "^1.0.0",
+        "vite": "^2.0.0"
     }
 }
