--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "àgiraud/rescript-react-diagram",
+    "name": "@giraud/rescript-react-diagram",
     "version": "0.0.1",
     "scripts": {
         "build": "rescript",
