--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
         "react"
     ],
     "dependencies": {
-        "@rescript/react": "^0.10.0",
-        "dagre": "^0.8.0",
-        "react": "^17.0.0",
-        "react-dom": "^17.0.0",
-        "react-reconciler": "^0.26.0"
+        "@rescript/react": "^0.11.0",
+        "dagre": "^0.8.0"
+    },
+    "peerDependencies": {
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
+        "react-reconciler": "^0.29.0"
     },
     "devDependencies": {
-        "@vitejs/plugin-react": "^1.0.0",
-        "rescript": "*",
-        "vite": "^2.9.15"
+        "@vitejs/plugin-react": "*",
+        "rescript": "^10.0.0",
+        "vite": "*"
     }
 }
