--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     ],
     "dependencies": {
         "@rescript/react": "^0.11.0",
-        "dagre": "^0.8.0"
+        "dagre": "^0.8.0",
+        "react-reconciler": "^0.29.0"
     },
     "peerDependencies": {
         "react": "^18.0.0",
-        "react-dom": "^18.0.0",
-        "react-reconciler": "^0.29.0"
+        "react-dom": "^18.0.0"
     },
     "devDependencies": {
         "@vitejs/plugin-react": "*",
